# kafka-basics

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
deploy/docker/: CONCEPTS.md  VISUALS.md
deploy/docker/data/: user_datagen.sql
src/: config.py  consumer.py  prodcuer.py  replay.py
src/data/: inventory.py  users.py
src/kafka_utils/: offset_reset.py
src/service/: order_processor.py
src/tool/: inventory.py  user.py
storage/: inventory.csv  users.csv
tests/: conftest.py  test_cli_tools.py  test_consumer.py  test_inventory.py  test_offset_reset.py  test_order_processor.py  test_producer.py  test_replay.py  test_users.py
tests/stubs/confluent_kafka/: __init__.py  admin.py  error.py  serialization.py
tests/stubs/confluent_kafka/schema_registry/: __init__.py  avro.py
