[project]
name = "kafka-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "authlib>=1.6.0",
    "avro>=1.12.0",
    "cachetools>=6.0.0",
    "confluent-kafka>=2.10.1",
    "fastavro>=1.11.1",
    "httpx>=0.28.1",
    "requests>=2.32.4",
    "urllib3>=2.4.0",
]
